<resources>
    <string name="app_name">FarmTrace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="numberoffarmers">1,200 </string>
    <string name="numberoffields">275</string>
    <string name="weeklyharvet">80,600</string>
    <string name="farmers">Farmers</string>
    <string name="crops">Crops</string>
    <string name="dashboard">Dashboard</string>
    <string name="fields">Fields</string>
    <string name="harvest">Weekly Harvest</string>
    <string name="empty_string">""</string>
    <string name="logout">Logout</string>
    <string name="seasons">Planting Seasons</string>
    <string name="farminputs">Farm Inputs</string>
    <string name="set_profile_photo">Set profile photo</string>
    <string name="seeds">Seed</string>
    <string name="chemicals">Chemical</string>
    <string name="fertilizers">Fertilizer</string>
    <string name="anyhdrous">Anyhdrous Fertilizer</string>
    <string name="dry">Dry Fertilizer</string>
    <string name="liquid">Liquid Fertilizer</string>
    <string name="micronutrients">Micronutrients Fertilizer</string>
    <string name="fungicide">Type: Fungicide</string>
    <string name="insecticide">Type : Insecticide</string>
    <string name="thiamethoxam">Active Ingredient : Thiamethoxam</string>
    <string name="difenoconazole">Active Ingredient : Difenoconazole</string>
    <string name="imidacloprid">Active Ingredient : Imidacloprid</string>
    <string name="alphaCrypermethrin">Active Ingredient : Alpha Crypermethrin</string>
    <string name="acetamiprid">Active Ingredient : Acetamiprid</string>
    <string name="spinosad">Active Ingredient : Spinosad</string>
    <string name="lambdacyhalothrin">Active Ingredient : Lambdacyhalothrin</string>
    <string name="cryromazine">Active Ingredient : Cryromazine</string>
    <string name="spiromesifen">Active Ingredient : Spiromesifen</string>
    <string name="bacillusThuringiensis">Active Ingredient : Bacillus Thuringiensis</string>
    <string name="azadiraachtin">Active Ingredient : Azadiraachtin</string>
    <string name="pyrethrins">Active Ingredient : Pyrethrins</string>
    <string name="tebuconazole">Active Ingredient : Tebuconazole</string>
    <string name="carbendazim">Active Ingredient : Carbendazim</string>
    <string name="manozeb">Active Ingredient : Manozeb</string>
    <string name="chlorothalonil">Active Ingredient : Chlorothalonil</string>
    <string name="copperOxychloride">Active Ingredient : Copper Oxychloride</string>
    <string name="sulphur">Active Ingredient : Sulphur</string>
    <string name="azoxystrobin">Active Ingredient : Azoxystrobin</string>
    <string name="monoDipotassiumPhosphates">Active Ingredient : Mono Dipotassium Phosphates</string>
    <string name="NPK">Main Nutrient : NPK</string>
    <string name="TSP">Main Nutrient : TSP</string>
    <string name="DAP">Main Nutrient : DAP</string>
    <string name="CAN">Main Nutrient : CAN</string>
    <string name="ASN">Main Nutrient : ASN</string>
    <string name="back">Back</string>
    <string name="farmingActivities">Farming Activities</string>
    <string name="addActivity">Add Activity</string>
    <string name="chooseActivity">Choose Activity</string>
    <string name="buyer">Buyer</string>
    <string name="fieldemployee">Field Employee</string>
    <string name="headofficeemployee">Head Office Employee</string>
    <string name="farmer">Farmer</string>
    <string name="input">Input : </string>
    <string name="inputType">Input Type : </string>
    <string name="quantity">Quantity : </string>
    <string name="save">Save</string>
    <string name="main_provider_name">FarmTrace Data</string>
    <string name="sync_title">Syncing</string>
</resources>
