<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_size"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:ignore="MissingPrefix"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/input"
        android:paddingBottom="@dimen/ui_padding"
        android:textSize="@dimen/medium_text" />

    <EditText
        android:id="@+id/txtFarmInput"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/txtInput"
        android:text="@string/fertilizers"
        android:enabled="false"
        android:textColor="@color/black_semi_transparent"
        android:textCursorDrawable="@null"
        android:background="@drawable/round_rect_shape"
        android:paddingBottom="@dimen/ui_padding"
        android:layout_marginBottom="@dimen/drawer_icon_size"
        android:textSize="@dimen/medium_text" />

    <TextView
        android:id="@+id/txtInputType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputType"
        android:paddingBottom="@dimen/ui_padding"
        android:textSize="@dimen/medium_text" />

    <Spinner
        android:id="@+id/cboInputType"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:spinnerMode="dropdown"
        android:prompt="@string/inputType"
        android:textCursorDrawable="@null"
        android:textColor="@color/black_semi_transparent"
        android:text="@string/inputType"
        android:background="@drawable/round_rect_shape"
        android:paddingBottom="@dimen/ui_padding"
        android:layout_marginBottom="@dimen/drawer_icon_size"
        />
    <requestFocus/>

    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/quantity"
        android:paddingBottom="@dimen/ui_padding"
        android:textSize="@dimen/medium_text" />

    <EditText
        android:id="@+id/txtQuantityInput"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:textColor="@color/black_semi_transparent"
        android:textCursorDrawable="@null"
        android:background="@drawable/round_rect_shape"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:text="0"
        android:paddingBottom="@dimen/ui_padding"
        android:layout_marginBottom="@dimen/drawer_icon_size"
        android:textSize="@dimen/medium_text" />

    <Button android:id="@+id/btnLogIn"
        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:layout_height="50dp"
        android:background="@drawable/green_button"
        android:text="@string/save"
        fontPath="fonts/kontrapunkt_light.otf"
        android:textColor="@android:color/white"
        />
</LinearLayout>